--- a/src/scss/snpt.scss
+++ b/src/scss/snpt.scss
@@ -241,6 +241,10 @@ input[type=checkbox] {
   }
 }
 
+.feather-github:hover {
+  fill: #fff;
+}
+
 
 @media screen and (max-width: 768px) {
   .container pre,
